[NAE-2072] Workspaces - introduce ProcessRoleServiceImpl.getDefaultRole and ProcessRoleServiceImpl.getAnonymousRole with string parameters - update getting of default roles in importer - fix some warning in importer